= master

* Handle invalid POST data when using the exception_page plugin (jeremyevans)

= 3.28.0 (2020-01-15)

* Add session_created_at and session_updated_at methods to the sessions plugin (jeremyevans)

* Make upgrading from rack session cookie in sessions plugin work with rack 2.0.8 (jeremyevans)

* Make json_parser parse request body as json even if request body has already been read (jeremyevans)

= 3.27.0 (2019-12-13)

* Allow json_parser return correct result for invalid JSON if the params_capturing plugin is used (jeremyevans) (#180)

* Add multibyte_string_matcher plugin for matching multibyte characters (jeremyevans)

* Split roda.rb into separate files (janko) (#177)

= 3.26.0 (2019-11-18)

* Combine multiple asset files with a newline when compiling them, avoiding corner cases with comments (ameuret) (#176)

* Add asychronous streaming support to the streaming plugin (janko) (#175)

= 3.25.0 (2019-10-15)

* Support change in tilt 2.0.10 private API to continue to support compiled templates, with up to 33% performance improvement (jeremyevans)

* Improve render performance with :locals option up to 75% by calling compiled template methods directly (jeremyevans)

= 3.24.0 (2019-09-13)

* Fix Proc.new warning in module_include plugin on Ruby 2.7+ (jeremyevans)

* Improve render_each performance by calling compiled template methods directly (jeremyevans)

= 3.23.0 (2019-08-13)

* Make roda/session_middleware work if type_routing plugin is loaded into Roda itself (jeremyevans) (#169)

* Handle requests with nothing before extension in the path in the type_routing plugin (jeremyevans) (#168)

* Always show line number in exception_page output in exception_page plugin (jeremyevans)

* Improve render/view performance up to 2x in development mode in the default case by calling compiled template methods directly (jeremyevans)

= 3.22.0 (2019-07-12)
